# meilisearch-tui

./: .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  justfile  pyproject.toml  tox.ini
.github/: release_draft_template.yaml
.github/workflows/: pypi_publish.yaml  release_drafter.yaml  testing.yaml
assets/: search.mov
meilisearch_tui/: __init__.py  __main__.py  _meilisearch_tui.pyi  client.py  config.py  errors.py  main.py  meilisearch.css  utils.py
meilisearch_tui/screens/: base_screen.py  configuration.py  connection_info.py  data_load.py  index.py  indexes.py  meilisearch_settings.py  search.py  welcome.py
meilisearch_tui/widgets/: error_message.py  index.py  index_sidebar.py  input.py  messages.py  sidebar.py
scripts/: load_data.py
src/: lib.rs
tests/: conftest.py  test_client.py  test_config.py  test_rust_module.py  test_utils.py
