[tool.poetry]
name = "meilisearch-tui"
version = "0.7.2"
description = "A TUI for Managing and Searching with Meilisearch"
authors = ["Paul Sanders <psanders1@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/sanders41/meilisearch-tui"
homepage = "https://github.com/sanders41/meilisearch-tui"
documentation = "https://github.com/sanders41/meilisearch-tui"
keywords = ["meilisearch", "tui"]
classifiers=[
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.8"
meilisearch-python-async = "1.2.2"
textual = "0.26.0"
uvloop = {version = "0.17.0", markers = "sys_platform != 'win32'"}
aiocache = "0.12.1"

[tool.poetry.group.dev.dependencies]
aiohttp = "3.8.4"
black = "23.3.0"
click = "8.1.3"
msgpack = "1.0.5"
mypy = "1.3.0"
pre-commit = "3.3.2"
pytest = "7.3.1"
pytest-asyncio = "0.21.0"
pytest-cov = "4.1.0"
ruff = "0.0.270"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
meilisearch = "meilisearch_tui.__main__:main"

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.egg
  | \.git
  | \.hg
  | \.mypy_cache
  | \.nox
  | \.tox
  | \.venv
  | \venv
  | _build
  | buck-out
  | build
  | dist
  | setup.py
)/
'''

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["aiocache.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=meilisearch_tui --cov-report term-missing"
asyncio_mode = "auto"

[tool.coverage.report]
exclude_lines = ["if __name__ == .__main__.:", "pragma: no cover"]

[tool.ruff]
select = ["E", "F", "UP", "I001", "T201", "T203"]
ignore = ["E501"]
line-length = 100
target-version = "py38"
fix = true
