[tool.poetry]
name = "meilisearch-tui"
version = "0.9.0"
description = "A TUI for Managing and Searching with Meilisearch"
authors = ["Paul Sanders <psanders1@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/sanders41/meilisearch-tui"
homepage = "https://github.com/sanders41/meilisearch-tui"
documentation = "https://github.com/sanders41/meilisearch-tui"
keywords = ["meilisearch", "tui"]
classifiers=[
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.8"
meilisearch-python-sdk = "2.9.0"
textual = "0.63.1"
typer = "0.12.3"
uvloop = {version = "0.19.0", markers = "sys_platform != 'win32'"}

[tool.poetry.group.dev.dependencies]
mypy = "1.10.0"
pre-commit = "3.5.0"
pytest = "8.2.1"
pytest-asyncio = "0.23.7"
pytest-cov = "5.0.0"
pytest-meilisearch = "0.5.0"
ruff = "0.4.4"
textual-dev = "1.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
meilisearch = "meilisearch_tui.main:typer_app"

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["aiocache.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=meilisearch_tui --cov-report term-missing --meilisearch-master-key masterKey"
markers = ["meilisearch"]
asyncio_mode = "auto"
meilisearch_client_scope = "function"

[tool.coverage.report]
exclude_lines = ["if __name__ == .__main__.:", "pragma: no cover"]

[tool.ruff]
select = ["E", "F", "UP", "I001", "T201", "T203"]
# Recommened ignores by ruff when using formatter
ignore = [
  "E501",
  "W191",
  "E111",
  "E114",
  "E117",
  "D206",
  "D300",
  "Q000",
  "Q001",
  "Q002",
  "Q003",
  "COM812",
  "COM819",
  "ISC001",
  "ISC002",
]
line-length = 100
target-version = "py38"
fix = true
